admission/ValidatingAdmissionPolicy/policies/webhook-hardening/validatingwebhookconfigurations/deny.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: violating-validatingwebhookconfiguration-hardening
  annotations:
    kubeapt.io/uuid: "49e3a715-8dd1-4862-b25e-ce373af957cb"
webhooks:
- name: webhook.example.com
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  clientConfig:
    service:
      name: webhook-service
      namespace: default
      path: /validate
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
