admission/ValidatingAdmissionPolicy/policies/webhook-hardening/validatingwebhookconfigurations/test.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: violating-validatingwebhookconfiguration-hardening
webhooks:
- name: webhook.example.com
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  clientConfig:
    service:
      name: webhook-service
      namespace: default
      path: /validate
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
